video quality text

--- a/index.html
+++ b/index.html
@@ -442,7 +442,6 @@
                                         View repository for source code and Readme file:
                                     </p>
                                     <p class="mb-4"><a href=https://github.com/bkoconnell/cs350-milestones>https://github.com/bkoconnell/cs350-milestones/</a></p>
-                                    <p class="mb-4">For Youtube demos, ensure the video is set to the highest quality. </p>
                                     <br />
                                     <h6 class="mb-4">Milestone 1 - Sound Sensor </h6>
                                     <p class="mb-4">This introductory milestone utilized a basic sound sensor from the GrovePi+ kit. 
@@ -473,7 +472,8 @@
                                     <p class="mb-4">Milestone 2 source code: 
                                         <a href=https://github.com/bkoconnell/cs350-milestones/tree/main/milestone2_dht_sensor>https://github.com/bkoconnell/cs350-milestones/tree/main/milestone2_dht_sensor </a></p>
                                     <p class="mb-4">Milestone 2 demo: 
-                                        <a href=https://youtu.be/Epvm2UJLJi0>https://youtu.be/Epvm2UJLJi0</a></p>
+                                        <a href=https://youtu.be/Epvm2UJLJi0>https://youtu.be/Epvm2UJLJi0</a><br />
+                                        (ensure the video is set to the highest quality)</p>
                                     <br />
                                     <h6 class="mb-4">Milestone 3 - Light Sensor </h6>
                                     <p class="mb-4">Another component of the final project is the light sensor, which is introduced in this milestone. 
@@ -491,7 +491,8 @@
                                     <p class="mb-4">Milestone 3 source code: 
                                         <a href=https://github.com/bkoconnell/cs350-milestones/tree/main/milestone3_light_sensor>https://github.com/bkoconnell/cs350-milestones/tree/main/milestone3_light_sensor </a></p>
                                     <p class="mb-4">Milestone 3 demo: 
-                                        <a href=https://youtu.be/Vu1d4RBZwRk>https://youtu.be/Vu1d4RBZwRk</a></p>
+                                        <a href=https://youtu.be/Vu1d4RBZwRk>https://youtu.be/Vu1d4RBZwRk</a><br />
+                                        (ensure the video is set to the highest quality)</p>
                                     <br />
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
