Class descriptiong + Create Image Table screenshot

--- a/index.html
+++ b/index.html
@@ -601,8 +601,15 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
+                                    <h6 class="mb-4">DAD 220 - Intro to SQL (MySQL server)</h6>
+                                    <p class="mb-4">This introductory class for Structured Query Language used the RDBMS database program called "MySQL" in the CODIO learning environment.  
+                                        All basic CRUD operations were covered for creating, reading, updating, and deleting tables. 
+                                        Below are a few examples of SQL statements and the corresponding table results from my DAD-220 final project.
+                                    </p>
+                                    <h6 class="mb-4">Create the "Image" Table</h6>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220/01_createtable.png" alt="..." />
                                     <p class="mb-4">View repository for source code:</p>
-                                    <p class="mb-4"><a href=https://github.com/bkoconnell/floweringspaces>https://github.com/bkoconnell/floweringspaces/</a></p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/DAD220-final-project>https://github.com/bkoconnell/DAD220-final-project</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
