--- a/index.html
+++ b/index.html
@@ -606,9 +606,26 @@
                                         All basic CRUD operations were covered for creating, reading, updating, and deleting tables. 
                                         Below are a few examples of SQL statements and the corresponding table results from my DAD-220 final project.
                                     </p>
+                                    <br />
                                     <h6 class="mb-4">Create the "Image" Table</h6>
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220/01_createtable.png" alt="..." />
-                                    <p class="mb-4">View repository for source code:</p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220/01_create_table.png" alt="..." />
+                                    <br />
+                                    <h6 class="mb-4">Insert Records to "Image" Table</h6>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220/02_insert_records.png" alt="..." />
+                                    <br />
+                                    <h6 class="mb-4">Find the Number of Messages Sent for Every Person</h6>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220/03_select_where.png" alt="..." />
+                                    <br />
+                                    <h6 class="mb-4">Find All Messages with at least One Image Attached</h6>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220/04_select_join.png" alt="..." />
+                                    <br />
+                                    <h6 class="mb-4">Update Records in the "Person" Table</h6>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220/05_update.png" alt="..." />
+                                    <br />
+                                    <h6 class="mb-4">Delete Records in the "Person" Table</h6>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220/06_delete.png" alt="..." />
+                                    <br />
+                                    <p class="mb-4">For my complete project with detailed explanations, please visit the following repository (for screenshots, view the .docx file):</p>
                                     <p class="mb-4"><a href=https://github.com/bkoconnell/DAD220-final-project>https://github.com/bkoconnell/DAD220-final-project</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
