repository link -- text update

--- a/index.html
+++ b/index.html
@@ -625,7 +625,8 @@
                                     <h6 class="mb-4">Delete Records in the "Person" Table</h6>
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/DAD220/06_delete.png" alt="..." />
                                     <br />
-                                    <p class="mb-4">For my complete project with detailed explanations, please visit the following repository (for screenshots, view the .docx file):</p>
+                                    <p class="mb-4">For my complete project with detailed explanations, please visit the following repository: <br />
+                                        (for screenshots, view the .docx file)</p>
                                     <p class="mb-4"><a href=https://github.com/bkoconnell/DAD220-final-project>https://github.com/bkoconnell/DAD220-final-project</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
