--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
                             <img class="img-fluid" src="assets/img/portfolio/DAD220.png" alt="..." />
                         </div>
                     </div>
+                    <!-- Portfolio Item - NoSQL/PyMongo-->
+                    <div class="col-md-6 col-lg-4">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalNoSQLpymongo">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/nosql_pymongo.png" alt="..." />
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -628,6 +637,63 @@
                                     <p class="mb-4">For my complete project with detailed explanations, please visit the following repository: <br />
                                         (for screenshots, view the .docx file)</p>
                                     <p class="mb-4"><a href=https://github.com/bkoconnell/DAD220-final-project>https://github.com/bkoconnell/DAD220-final-project</a></p>
+                                    <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio Modal - NoSql/PyMongo -->
+        <div class="portfolio-modal modal fade" id="portfolioModalDAD220" tabindex="-1" aria-labelledby="portfolioModalNoSQLpymongo" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                    <div class="modal-body text-center pb-5">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">NoSQL / PyMongo</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/nosql_pymongo.png" alt="..." />
+                                    <!-- Portfolio Modal - Text-->
+                                    <h6 class="mb-4">CS 340 - Client/Server Development with Linux (Project One)</h6>
+                                    <p class="mb-4">Project One for this class focuses on setting up a NoSQL database with MongoDB,
+                                        creating a Python module to communicate with the database via the PyMongo distribution,
+                                        and a test script to verify functionality of the module. 
+                                        The Python module includes logic to connect to the mongo database as well as logic for basic CRUD operations.
+                                    </p>
+                                    <br />
+                                    <h6 class="mb-4">Python Module</h6>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/CS340_nosql/01_project_one_script.PNG" alt="..." />
+                                    <br />
+                                    <h6 class="mb-4">Test Script</h6>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/CS340_nosql/02_project_one_test_script.PNG" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/CS340_nosql/03_project_one_test_script.PNG" alt="..." />
+                                    <br />
+                                    <h6 class="mb-4">Execution / Results</h6>                                    
+                                    <p class="mb-4">Below are screenshots of the test script execution and the corresponding results:</p>
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/CS340_nosql/04_project_one_test_script_py.png" alt="..." />
+                                    <br />
+                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/CS340_nosql/05_project_one_test_script_py_results.png" alt="..." />
+                                    <br />
+                                    <br />
+                                    <p class="mb-4">For my Project One source code, visit the following repository: </p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/DAD220-final-project>https://github.com/bkoconnell/</a></p>
+                                    <br />
+                                    <p class="mb-4">For additional NoSQL assignment submissions, visit the following repository: </p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/DAD220-final-project>https://github.com/bkoconnell/</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
