--- a/index.html
+++ b/index.html
@@ -690,10 +690,10 @@
                                     <br />
                                     <br />
                                     <p class="mb-4">For my Project One source code, visit the following repository: </p>
-                                    <p class="mb-4"><a href=https://github.com/bkoconnell/DAD220-final-project>https://github.com/bkoconnell/</a></p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/CS340-final-project/tree/main/project_one>https://github.com/bkoconnell/CS340-final-project/tree/main/project_one/</a></p>
                                     <br />
                                     <p class="mb-4">For additional NoSQL assignment submissions, visit the following repository: </p>
-                                    <p class="mb-4"><a href=https://github.com/bkoconnell/DAD220-final-project>https://github.com/bkoconnell/</a></p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/CS340-final-project/tree/main/mongodb_assignments>https://github.com/bkoconnell/CS340-final-project/tree/main/mongodb_assignments/</a></p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
