update modal text for MEAN stack

--- a/index.html
+++ b/index.html
@@ -321,17 +321,21 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Based on the final project for my CS 465 Full Stack I class.</p>
+                                    <p class="mb-4">My own MEAN stack project, based on the final project for my CS 465 Full Stack I class.</p>
                                     <p class="mb-4">This JavaScript project builds a MEAN full stack application with an MVC design pattern and a RESTful API backend service. 
-                                        The Node.JS server hosts dynamic HTML pages, utilizing Handlebars as the view engine. 
-                                        Routers map all incoming requests, and controllers contain the program's logic. 
-                                        The model schema is set with Mongoose ODM, which works with Express.JS to interact with the Mongo database. 
-                                        A frontend administration page is created using Angular.JS, 
-                                        and Node.JS security packages assist with implementing user registration and user authentication logic. 
-                                        The Angular frontend is setup as an SPA, providing a highly interactive interface for the client.                           
+                                        The Node.JS server hosts dynamic HTML pages, utilizing Express Handlebars as the view engine. 
+                                        Express routers map all incoming requests to the appropriate controllers, which contain the program's logic. 
+                                        The model schema is created using Mongoose ODM, which sets the body structure for requests coming through the API service interacting with the Mongo database. 
+                                        </p>
+                                    <p class="mb-4"> A frontend administration page is created using Angular, setup as a single page application (SPA), 
+                                        providing a highly interactive interface for the client. 
+                                        Lastly, Node.JS security packages assist with implementing user registration and user authentication logic, 
+                                        including the use of JSON web tokens to verify user access for ADD/EDIT/DELETE functionality in the 'Flowers' database collection.                       
                                     </p>
-                                    <p class="mb-4">My project improves upon a partially built class project, and the content for my project is original. 
-                                        It is based on a real company, with their permission, but does not represent their official website. 
+                                    <p class="mb-4">My project improves upon the original class project, and the content for my project is original. 
+                                        It is based on a real company, with their permission, but does not represent their official website.
+                                    </p>
+                                    <p> 
                                         <!-- For a detailed review of this project, including the specific differences from the original class project, 
                                         please watch my screencast below: -->
                                     </p>
