update modal text for MEAN stack

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">My own MEAN stack project, based on the final project for my CS-465-Full-Stack class.</p>
+                                    <p class="mb-4">My MEAN stack project based on the final project for my CS-465-Full-Stack class.</p>
                                     <p class="mb-4">This JavaScript project builds a MEAN full stack application with an MVC design pattern and a RESTful API backend service. 
                                         The Node.JS server hosts dynamic HTML pages, utilizing Express Handlebars as the view engine. 
                                         Express routers map all incoming requests to the appropriate controllers, which contain the program's logic. 
