changed modal 3 to client/server

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                             <img class="img-fluid" src="assets/img/portfolio/AWS.png" alt="..." />
                         </div>
                     </div>
-                    <!-- Portfolio Item 3-->
+                    <!-- Client/Server Python Full Stack-->
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#clientserverpython">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -394,8 +394,8 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 3-->
-        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-labelledby="portfolioModal3" aria-hidden="true">
+        <!-- Client/Server Python-->
+        <div class="portfolio-modal modal fade" id="clientserverpython" tabindex="-1" aria-labelledby="clientserverpython" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
@@ -404,7 +404,9 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Client/Server - Python</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Client/Server:</h2>
+                                    <br />
+                                    <h3 class="portfolio-modal-title text-secondary mb-0">PyMongo & DASH</h3>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
