updated embedded systems modal

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                             <img class="img-fluid" src="assets/img/portfolio/Client_Server_Python_modal.png" alt="..." />
                         </div>
                     </div>
-                    <!-- Portfolio Item 4-->
+                    <!-- Embedded Systems Milestones-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#embeddedsystemsmilestones">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -323,12 +323,12 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/floweringspaces.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">My MEAN stack project based on the final project for CS-465-Full-Stack.</p>
-                                    <p class="mb-4">This JavaScript project builds a MEAN full stack application with an MVC design pattern and a RESTful API backend service. 
-                                        The Node.JS server hosts dynamic HTML pages, utilizing Express Handlebars as the view engine. 
+                                    <p class="mb-4">This JavaScript project builds a MEAN full stack application with an MVC design pattern and a RESTful API back-end service. 
+                                        The Node.JS platform sets up the back-end server, which hosts dynamic web content by utilizing Express Handlebars as the view engine. 
                                         Express routers map all incoming requests to the appropriate controllers, which contain the program's logic. 
                                         The model schema is created using Mongoose ODM, which sets the body structure for requests coming through the API service interacting with the Mongo database. 
                                         </p>
-                                    <p class="mb-4"> A frontend administration page is created using Angular, setup as a single page application (SPA), 
+                                    <p class="mb-4"> A front-end administration page is created using Angular, setup as a single page application (SPA), 
                                         providing a highly interactive interface for the client. 
                                         Lastly, Node.JS security packages assist with implementing user registration and user authentication logic, 
                                         including the use of JSON web tokens to verify user access for ADD/EDIT/DELETE functionality in the 'Flowers' database collection.                       
@@ -497,8 +497,8 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 4-->
-        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-labelledby="portfolioModal4" aria-hidden="true">
+        <!-- Portfolio Modal - Embedded System Milestones-->
+        <div class="portfolio-modal modal fade" id="embeddedsystemsmilestones" tabindex="-1" aria-labelledby="embeddedsystemsmilestones" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
