updated MySQL modal

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                             <img class="img-fluid" src="assets/img/portfolio/fullstack_MEAN.png" alt="..." />
                         </div>
                     </div>
-                    <!-- Portfolio Item - SQL-->
+                    <!-- Portfolio Item - MySQL-->
                     <div class="col-md-6 col-lg-4">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalDAD220">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#mysql">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -695,8 +695,8 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal - SQL-->
-        <div class="portfolio-modal modal fade" id="portfolioModalDAD220" tabindex="-1" aria-labelledby="portfolioModalDAD220" aria-hidden="true">
+        <!-- Portfolio Modal - MySQL-->
+        <div class="portfolio-modal modal fade" id="mysql" tabindex="-1" aria-labelledby="mysql" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
