added content for Embedded Systems Final modal

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal - Embedded System Milestones-->
+        <!-- Portfolio Modal - Embedded Systems Milestones-->
         <div class="portfolio-modal modal fade" id="embeddedsystemsmilestones" tabindex="-1" aria-labelledby="embeddedsystemsmilestones" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
@@ -602,8 +602,8 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal - Embedded System Milestones-->
-        <div class="portfolio-modal modal fade" id="embeddedsystemsmilestones" tabindex="-1" aria-labelledby="embeddedsystemsmilestones" aria-hidden="true">
+        <!-- Portfolio Modal - Embedded Systems Final-->
+        <div class="portfolio-modal modal fade" id="embeddedsystemsmilestones" tabindex="-1" aria-labelledby="embeddedsystemsfinal" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
@@ -628,62 +628,39 @@
                                     <p class="mb-4">(embedded systems w/ raspberry pi4 and grovepi+) </p>
                                     <p class="mb-4">In this class, we explored emerging systems, architectures, and technologies with a focus on hardware/software interface. 
                                         Utilizing the Raspberry Pi embedded system and the GrovePi+ sensor kit, we wrote specific software to interface with the embedded system 
-                                        and control hardware and software components. The following milestone projects are the building blocks for the eventual final project. 
-                                        View repository for source code and Readme file:
+                                        and control hardware and software components. 
                                     </p>
-                                    <p class="mb-4"><a href=https://github.com/bkoconnell/cs350-milestones>https://github.com/bkoconnell/cs350-milestones/</a></p>
+                                    <p>                                        
+                                        The following is the Milestone 4 project and the Final Project which build on the previous
+                                        three milestones for this class. View repository for source code and Readme file:
+                                    </p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/cs350-final-project>https://github.com/bkoconnell/cs350-final-project/</a></p>
                                     <br />
-                                    <h6 class="mb-4">Milestone 1 - Sound Sensor </h6>
-                                    <p class="mb-4">This introductory milestone utilized a basic sound sensor from the GrovePi+ kit. 
-                                        An LED light was attached to the embedded system along with the sound sensor, and software was modified accordingly 
-                                        so that when sound exceeded a specified threshold it triggered the LED light to turn on. 
-                                        The specific milestone 1 modifications are commented in the source code. 
+                                    <h6 class="mb-4">Milestone 4 - Weather Station & Web Dashboard </h6>
+                                    <p class="mb-4">Replace this text body ...
+                                        Include minute markers w/ context for the Youtube Video
+                                        </br>
+                                        Source code includes the data.json of the collected data (which is used to feed the web dashboard), 
+                                        the index.html (the web dashboard), and milestone4_v03.py (the python script for the dht weather station)
                                     </p>
-                                    <p class="mb-4">Milestone 1 source code: 
-                                        <a href=https://github.com/bkoconnell/cs350-milestones/tree/main/milestone1_sound_sensor>https://github.com/bkoconnell/cs350-milestones/tree/main/milestone1_sound_sensor </a></p>
-                                    <p class="mb-4">Milestone 1 demo: 
-                                        <a href=https://youtu.be/Qr349Zf1F6U>https://youtu.be/Qr349Zf1F6U</a><br />
+                                    <p class="mb-4">Milestone 4 source code: 
+                                        <a href=https://github.com/bkoconnell/cs350-final-project/tree/main/milestone4_dht_web_dashboard>https://github.com/bkoconnell/cs350-final-project/tree/main/milestone4_dht_web_dashboard/</a></p>
+                                    <p class="mb-4">Milestone 4 demo:
+                                        <a href=https://youtu.be/W_rE-gQg8Z8>https://youtu.be/W_rE-gQg8Z8</a><br />
                                         (ensure the video is set to the highest quality)</p>
                                     <br />
-                                    <h6 class="mb-4">Milestone 2 - Digital Humidity & Temperature Sensor </h6>
-                                    <p class="mb-4">This milestone is the first building block for the final project. 
-                                        The Grove DHT (digital humidity and temperature) sensor is used to capture data readings for temperature and humidity of the environment. 
-                                        The software implements a while loop to read in the data from the sensor and converts the temperature reading to Fahrenheit. 
-                                        It then creates a JSON object for the data with specific formatting, then stores the object in a JSON database file (output as data.json). 
-                                        Additionally, the JSON data is output to the console for demonstration purposes.
+                                    <h6 class="mb-4">Final Project - DHT Weather Station Prototype </h6>
+                                    <p class="mb-4">Replace this text body ...
+                                        Source code includes data.json of the collected data, and the final.py python script for the DHT Weather Station prototype
                                     </p>
-                                    <p class="mb-4">The software also converts the data readings to string format then outputs the strings to an LCD screen. 
-                                        A sleep timer is set at the end of the loop, which determines how often the loop iterates. 
-                                        This controls the output frequency for both the JSON file and the LCD screen refresh. 
-                                        It's worth noting that each successive loop iteration appends the new data to the existing JSON file so that previous data is not overwritten. 
-                                        The JSON database file (data.json) for this milestone is located in the directory with the source code (link below). 
-                                        In the demo below, the Python script is run in the terminal and I place my fingers on the DHT sensor to manipulate the humidity and demonstrate functionality of the program.
-                                    </p>
-                                    <p class="mb-4">Milestone 2 source code: 
-                                        <a href=https://github.com/bkoconnell/cs350-milestones/tree/main/milestone2_dht_sensor>https://github.com/bkoconnell/cs350-milestones/tree/main/milestone2_dht_sensor </a></p>
+                                    <p class="mb-4">Final Project source code: 
+                                        <a href=https://github.com/bkoconnell/cs350-final-project/tree/main/final_project_weather_station>https://github.com/bkoconnell/cs350-final-project/tree/main/final_project_weather_station/ </a></p>
+                                <!-- No Demo Available (yet)
                                     <p class="mb-4">Milestone 2 demo: 
                                         <a href=https://youtu.be/Epvm2UJLJi0>https://youtu.be/Epvm2UJLJi0</a><br />
                                         (ensure the video is set to the highest quality)</p>
                                     <br />
-                                    <h6 class="mb-4">Milestone 3 - Light Sensor </h6>
-                                    <p class="mb-4">Another component of the final project is the light sensor, which is introduced in this milestone. 
-                                        The goal of this milestone is to simulate an interupt condition for the embedded system. 
-                                        The software is designed so that when the light reading crosses a specific threshold (when the environment's lighting is dark enough) the attached LED will turn on. 
-                                        The logic is written inside of a while loop and a sleep timer is set at the end of the loop, which determines how often the loop iterates. 
-                                        Each iteration executes the logic to read in the sensor data and check it against the threshold.
-                                    </p>
-                                    <p class="mb-4">In the demo below, a blue LED and a light sensor are connected to the embedded system. 
-                                        When the program is initiated, the blue LED turns on because the light in the room is dark enough to trigger it. 
-                                        However, when I shine a flashlight onto the light sensor, the blue LED shuts off. 
-                                        This demonstrates the interupt condition set by the lighting threshold in the software. 
-                                        For each loop iteration, the sensor reading and calculated resistance are output to the console.
-                                    </p>
-                                    <p class="mb-4">Milestone 3 source code: 
-                                        <a href=https://github.com/bkoconnell/cs350-milestones/tree/main/milestone3_light_sensor>https://github.com/bkoconnell/cs350-milestones/tree/main/milestone3_light_sensor </a></p>
-                                    <p class="mb-4">Milestone 3 demo: 
-                                        <a href=https://youtu.be/Vu1d4RBZwRk>https://youtu.be/Vu1d4RBZwRk</a><br />
-                                        (ensure the video is set to the highest quality)</p>
-                                    <br />
+                                -->
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
