--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
             </div>
         </div>
         <!-- Portfolio Modal - Embedded Systems Final-->
-        <div class="portfolio-modal modal fade" id="embeddedsystemsmilestones" tabindex="-1" aria-labelledby="embeddedsystemsfinal" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="embeddedsystemsfinal" tabindex="-1" aria-labelledby="embeddedsystemsfinal" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
@@ -614,7 +614,7 @@
                                     <!-- Portfolio Modal - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Embedded Systems:</h2>
                                     <br />
-                                    <h3 class="portfolio-modal-title text-secondary mb-0">Milestone Projects</h3>
+                                    <h3 class="portfolio-modal-title text-secondary mb-0">Final Project</h3>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
