--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/resume/BKO_resume_2021_A4_v01.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/resume/BKO_resume_2022_v03.png" alt="..." />
                     </div>
                 </div>
             </div>
 
             <!-- Resume Section Button-->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-dark" href="./assets/BKO_resume_2021_A4_v04.docx">
+                <a class="btn btn-xl btn-outline-dark" href="./assets/BKO_resume_2022_v03.docx">
                     <i class="fas fa-download me-2"></i>
                     Download Resume
                 </a>
@@ -984,7 +984,7 @@
                                     <div class="divider-custom-line"></div>
                                 </div>
                                 <!-- Resume Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/resume/BKO_resume_2021_A4_v01.png"
+                                <img class="img-fluid rounded mb-5" src="assets/img/resume/BKO_resume_2022_v03.png"
                                     alt="..." />
                                 <!-- Resume Modal - Text-->
                                 <!--
@@ -994,7 +994,7 @@
 
                                 <!-- Download Resume button-->
                                 <div class="text-center mt-4">
-                                    <a class="btn btn-xl btn-outline-dark" href="./assets/BKO_resume_2021_A4_v04.docx">
+                                    <a class="btn btn-xl btn-outline-dark" href="./assets/BKO_resume_2022_v03.pdf">
                                         <i class="fas fa-download me-2"></i>
                                         Download Resume
                                     </a>
