update resume download file

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
             <!-- Resume Section Button-->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-dark" href="./assets/BKO_resume_2022_v03.docx">
+                <a class="btn btn-xl btn-outline-dark" href="./assets/BKO_resume_2022_v03.pdf">
                     <i class="fas fa-download me-2"></i>
                     Download Resume
                 </a>
