--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
                 </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
+                    <!-- Portfolio Item - Coalescer (Python OOP / Subnetting / Aggregating) -->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#coalescer">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/coalescer/coalesce_dockerfile3.png" alt="..." />
+                        </div>
+                    </div>
                     <!-- Portfolio Item - MEAN stack-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#meanstack">
@@ -308,6 +317,46 @@
     
         <!-- PORTFOLIO MODALS -->
 
+        <!-- Portfolio Modal - Coalescer -->
+        <div class="portfolio-modal modal fade" id="coalescer" tabindex="-1" aria-labelledby="coalescer" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                    <div class="modal-body text-center pb-5">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">IP Coalescer</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/coalescer/coalescence_py.png" alt="..." />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4">Some Text.</p>
+                                    <p class="mb-4">sOME tEXT. 
+                                        </p>
+                                    <p class="mb-4"> sOME TEXT.                    
+                                    </p>
+                                    <p class="mb-4">MORE text.
+                                    </p>
+                                    <p class="mb-4">For the source code, please visit my Github repository:</p>
+                                    <p class="mb-4"><a href=https://github.com/bkoconnell/coalescer>https://github.com/bkoconnell/coalescer/</a></p>
+                                    <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Portfolio Modal - MEAN Stack -->
         <div class="portfolio-modal modal fade" id="meanstack" tabindex="-1" aria-labelledby="meanstack" aria-hidden="true">
             <div class="modal-dialog modal-xl">
