update resume to 2023_v01

--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/resume/BKO_resume_2021_A4_v01.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/resume/BKO_resume_2023_v01.png" alt="..." />
                         </div>
                     </div>
                 </div>
 
                 <!-- Resume Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-dark" href="./assets/BKO_resume_2021_A4_v04.docx">
+                    <a class="btn btn-xl btn-outline-dark" href="./assets/resume/BKO_resume_2023_v01.pdf">
                         <i class="fas fa-download me-2"></i>
                         Download Resume
                     </a>
@@ -811,7 +811,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Resume Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/resume/BKO_resume_2021_A4_v01.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/resume/BKO_resume_2023_v01.png" alt="..." />
                                     <!-- Resume Modal - Text-->
                                 <!--
                                     <p class="mb-4">View repository for source code:</p>
@@ -820,7 +820,7 @@
                                     
                                     <!-- Download Resume button-->
                                     <div class="text-center mt-4">
-                                        <a class="btn btn-xl btn-outline-dark" href="./assets/BKO_resume_2021_A4_v04.docx">
+                                        <a class="btn btn-xl btn-outline-dark" href="./assets/resume/BKO_resume_2023_v01.pdf">
                                             <i class="fas fa-download me-2"></i>
                                             Download Resume
                                         </a>
